# megascan

./: README.md
src/: CMakeCache.txt  CMakeLists.txt  Makefile  ascii_to_hid.h  cmake_install.cmake  gpio.cpp  gpio.h  hid_handler.cpp  hid_handler.h  main.cpp  qr_code_detection.cpp  qr_code_scanner  qr_decoder.cpp  qr_decoder.h  usb_hid_keys.h
white_detector/: CMakeLists.txt  main.cpp
